fix project-card overflow for skills used

--- a/webApp/static/styles/app.css
+++ b/webApp/static/styles/app.css
@@ -730,6 +730,7 @@ h1 {
 .prj-skill-used {
   margin: 0.5rem;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 0.5rem;
   font-weight: 400;
 }
